--- a/index.html
+++ b/index.html
@@ -103,5 +103,68 @@
     </div>
 
     <script src="script.js"></script>
+
+
+
+<!-- MODAL DE CONFIRMAÇÃO DO SISTEMA (substitui confirm) -->
+<div id="confirmModal" class="modal-overlay" style="display:none;">
+  <div class="cyber-modal">
+    <div class="modal-header">
+      <h3 id="confirmTitle">CONFIRMAÇÃO DO SISTEMA</h3>
+      <button class="close-modal" onclick="closeConfirm()">X</button>
+    </div>
+    <div class="modal-body" id="confirmMessage">Tem certeza?</div>
+    <div class="modal-footer">
+      <button class="cyber-btn danger" onclick="confirmYes()">CONFIRMAR</button>
+      <button class="cyber-btn small" onclick="closeConfirm()">CANCELAR</button>
+    </div>
+  </div>
+</div>
+
+    <!-- MODAL DE AVISO DO SISTEMA (substitui alert) -->
+    <div id="toastModal" class="modal-overlay" style="display:none;">
+      <div class="cyber-modal">
+        <div class="modal-header">
+          <h3 id="toastTitle">SISTEMA</h3>
+          <button class="close-modal" onclick="closeToast()">X</button>
+        </div>
+        <div class="modal-body" id="toastMessage">Mensagem</div>
+        <div class="modal-footer">
+          <button class="cyber-btn small" onclick="closeToast()">OK</button>
+        </div>
+      </div>
+    </div>
+
+<!-- MODAL DE CONFIRMAÇÃO DO SISTEMA -->
+<div id="confirmModal" class="modal-overlay" style="display:none;">
+  <div class="cyber-modal">
+    <div class="modal-header">
+      <h3>CONFIRMAÇÃO DO SISTEMA</h3>
+      <button class="close-modal" onclick="closeConfirm()">X</button>
+    </div>
+    <div class="modal-body" id="confirmMessage">Tem certeza?</div>
+    <div class="modal-footer">
+      <button class="cyber-btn" onclick="confirmYes()">CONFIRMAR</button>
+      <button class="cyber-btn small" onclick="closeConfirm()">CANCELAR</button>
+    </div>
+  </div>
+</div>
+
+<!-- MODAL DE CONFIRMAÇÃO DO SISTEMA -->
+<div id="confirmModal" class="modal-overlay" style="display:none;">
+  <div class="cyber-modal">
+    <div class="modal-header">
+      <h3>CONFIRMAÇÃO DO SISTEMA</h3>
+      <button class="close-modal" onclick="closeConfirm()">X</button>
+    </div>
+    <div class="modal-body" id="confirmMessage">Tem certeza?</div>
+    <div class="modal-footer">
+      <button class="cyber-btn" onclick="confirmYes()">CONFIRMAR</button>
+      <button class="cyber-btn small" onclick="closeConfirm()">CANCELAR</button>
+    </div>
+  </div>
+</div>
+
+
 </body>
 </html>
