Revise AI protocol description in index.html
Updated the description of the AI protocol in the rules section.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h2>// ARQUIVO: MANUAL_DO_AGENTE.txt</h2>
                 <div class="rules-content terminal-text">
                     <p>> [01] O OBJETIVO</p>
-                    <p>Este protocolo foi desenhado para dominar a Inteligência Artificial em 4 semanas.</p>
+                    <p>Este protocolo foi desenhado para você começar a aprender sobre a Inteligência Artificial, e adivinha que ajudou a criar? Ela mesmo a IA.</p>
                     <br>
                     <p>> [02] REGRAS DE ENGAJAMENTO</p>
                     <ul class="cyber-list">
